[tool.mypy]
strict = true

[tool.ruff]
extend-select = [
    # Enable isort
    "I",
    # Prevent dangling tasks
    "RUF006"
]

[tool.poetry]
name = "io"
packages = [{ include = "bot" }]
version = "0"
description = "A flexible code-running bot."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
hikari = "^2.3.0"
hikari-crescent = "^1.3.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.4"
dahlia = "^2.3.2"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"

[tool.poetry.group.typing.dependencies]
mypy = "^1.1.1"

[tool.poetry.group.linting.dependencies]
black = "^23.1.0"
ruff = "^0.14.4"
codespell = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
